// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic > hello {'world'} ! 1`] = `
{
  "body": {
    "end": 17,
    "items": [
      {
        "end": 6,
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hello ",
      },
      {
        "end": 15,
        "loc": {
          "end": {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "start": 6,
        "type": 9,
        "value": "world",
      },
      {
        "end": 17,
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "start": {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
        },
        "start": 15,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 17,
  "loc": {
    "end": {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "source": "hello {'world'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`emoji > hi, {'😺'} ! 1`] = `
{
  "body": {
    "end": 12,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 10,
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "😺",
      },
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "start": 10,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hi, {'😺'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`empty string 1`] = `
{
  "body": {
    "end": 4,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 9,
        "value": "",
      },
    ],
    "loc": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 4,
  "loc": {
    "end": {
      "column": 5,
      "line": 1,
      "offset": 4,
    },
    "source": "{''}",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`errors > include new line: hi { 'foo\\n' } 1`] = `
{
  "body": {
    "end": 14,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 14,
        "loc": {
          "end": {
            "column": 4,
            "line": 2,
            "offset": 14,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "foo",
      },
    ],
    "loc": {
      "end": {
        "column": 4,
        "line": 2,
        "offset": 14,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 14,
  "loc": {
    "end": {
      "column": 4,
      "line": 2,
      "offset": 14,
    },
    "source": "hi, { 'foo
' }",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`errors > invalid unicode escape: hi { '\\uw' } 1`] = `
{
  "body": {
    "end": 13,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "\\uw",
      },
      {
        "end": 13,
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
        },
        "start": 11,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 13,
  "loc": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": "hi, {'\\uw'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`errors > not close single quote at EOF: hi { 'foo 1`] = `
{
  "body": {
    "end": 9,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 9,
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "foo",
      },
    ],
    "loc": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 9,
  "loc": {
    "end": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "source": "hi, {'foo",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`errors > not close single quote: hi { 'foo } 1`] = `
{
  "body": {
    "end": 12,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "foo }",
      },
    ],
    "loc": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hi, { 'foo }",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`errors > unknown escape: '\\x41' 1`] = `
{
  "body": {
    "end": 14,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "x41",
      },
      {
        "end": 14,
        "loc": {
          "end": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "start": 12,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 14,
  "loc": {
    "end": {
      "column": 15,
      "line": 1,
      "offset": 14,
    },
    "source": "hi, {'\\x41'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`escapes > backslash baackslash: '\\\\' 1`] = `
{
  "body": {
    "end": 12,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 10,
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "\\",
      },
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "start": 10,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hi, {'\\\\'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`escapes > backslash quote: '\\'' 1`] = `
{
  "body": {
    "end": 12,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 10,
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "'",
      },
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "start": 10,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hi, {'\\''} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`escapes > unicode 4 digits: '\\\\u0041' 1`] = `
{
  "body": {
    "end": 17,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 15,
        "loc": {
          "end": {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "\\u0041",
      },
      {
        "end": 17,
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "start": {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
        },
        "start": 15,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 17,
  "loc": {
    "end": {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "source": "hi, {'\\\\u0041'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`escapes > unicode 6 digits: '\\\\U01F602' 1`] = `
{
  "body": {
    "end": 19,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 17,
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "\\U01F602",
      },
      {
        "end": 19,
        "loc": {
          "end": {
            "column": 20,
            "line": 1,
            "offset": 19,
          },
          "start": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
        },
        "start": 17,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 19,
  "loc": {
    "end": {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "source": "hi, {'\\\\U01F602'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`intlify message syntax special characters > % 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 9,
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "%",
      },
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hi, {'%'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`intlify message syntax special characters > @ 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 9,
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "@",
      },
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hi, {'@'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`intlify message syntax special characters > { 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 9,
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "{",
      },
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hi, {'{'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`intlify message syntax special characters > | 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 9,
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "|",
      },
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hi, {'|'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`intlify message syntax special characters > } 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 9,
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "}",
      },
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hi, {'}'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`multi bytes > こんにちは、{'世界'}！ 1`] = `
{
  "body": {
    "end": 13,
    "items": [
      {
        "end": 6,
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "こんにちは、",
      },
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "start": 6,
        "type": 9,
        "value": "世界",
      },
      {
        "end": 13,
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "start": 12,
        "type": 3,
        "value": "！",
      },
    ],
    "loc": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 13,
  "loc": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": "こんにちは、{'世界'}！",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`other special characters > !#%^&*()-_+=[]:;?.<>" 1`] = `
{
  "body": {
    "end": 32,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 30,
        "loc": {
          "end": {
            "column": 31,
            "line": 1,
            "offset": 30,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "!#%^&*()-_+=[]:;?.<>"\`",
      },
      {
        "end": 32,
        "loc": {
          "end": {
            "column": 33,
            "line": 1,
            "offset": 32,
          },
          "start": {
            "column": 31,
            "line": 1,
            "offset": 30,
          },
        },
        "start": 30,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 33,
        "line": 1,
        "offset": 32,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 32,
  "loc": {
    "end": {
      "column": 33,
      "line": 1,
      "offset": 32,
    },
    "source": "hi, {'!#%^&*()-_+=[]:;?.<>"\`'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`unicode > 4 digits: '\\u0041' 1`] = `
{
  "body": {
    "end": 16,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 14,
        "loc": {
          "end": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "A",
      },
      {
        "end": 16,
        "loc": {
          "end": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
          "start": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
        },
        "start": 14,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 17,
        "line": 1,
        "offset": 16,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 16,
  "loc": {
    "end": {
      "column": 17,
      "line": 1,
      "offset": 16,
    },
    "source": "hi, {'\\u0041'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`unicode > 6 digits: \\U01F602' 1`] = `
{
  "body": {
    "end": 18,
    "items": [
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi, ",
      },
      {
        "end": 16,
        "loc": {
          "end": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 9,
        "value": "😂",
      },
      {
        "end": 18,
        "loc": {
          "end": {
            "column": 19,
            "line": 1,
            "offset": 18,
          },
          "start": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
        },
        "start": 16,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 18,
  "loc": {
    "end": {
      "column": 19,
      "line": 1,
      "offset": 18,
    },
    "source": "hi, {'\\U01F602'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;
